--- a/Bartle Test/iPadMain.storyboard
+++ b/Bartle Test/iPadMain.storyboard
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="8173.3" systemVersion="14F27" targetRuntime="iOS.CocoaTouch.iPad" propertyAccessControl="none" useAutolayout="YES" initialViewController="2XP-KR-hxe">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9531" systemVersion="14F27" targetRuntime="iOS.CocoaTouch.iPad" propertyAccessControl="none" useAutolayout="YES" initialViewController="2XP-KR-hxe">
     <dependencies>
         <deployment identifier="iOS"/>
         <development version="5100" identifier="xcode"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="8142"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9529"/>
     </dependencies>
     <customFonts key="customFonts">
         <mutableArray key="HelveticaNeueLights.ttc">
@@ -255,7 +255,7 @@ iOS App Developed by Alexander Chai. Tap here for more infoTap Here </string>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="68T-yp-SQS">
                                 <rect key="frame" x="0.0" y="214" width="1024" height="193"/>
-                                <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
+                                <color key="backgroundColor" red="0.93725490199999995" green="0.93725490199999995" blue="0.95686274510000002" alpha="1" colorSpace="calibratedRGB"/>
                                 <state key="normal">
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
@@ -265,7 +265,7 @@ iOS App Developed by Alexander Chai. Tap here for more infoTap Here </string>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="y66-0v-gJ9">
                                 <rect key="frame" x="0.0" y="407.5" width="1024" height="193"/>
-                                <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
+                                <color key="backgroundColor" red="0.93725490199999995" green="0.93725490199999995" blue="0.95686274510000002" alpha="1" colorSpace="calibratedRGB"/>
                                 <state key="normal">
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
@@ -356,7 +356,7 @@ Unicode: U+2190, UTF-8: E2 86 90</string>
                         <segue destination="4EH-C4-lGd" kind="modal" identifier="socializerSegue" id="q1C-Yn-1KF"/>
                         <segue destination="Gep-T2-Ilc" kind="modal" identifier="explorerSegue" id="JxU-XS-KBB"/>
                         <segue destination="oy1-dY-zn3" kind="modal" identifier="acheiverSegue" id="uXn-MK-h2P"/>
-                        <segue destination="yVg-zm-ByK" kind="modal" identifier="killerSegue" id="oHf-Yp-rPX"/>
+                        <segue destination="yVg-zm-ByK" kind="modal" identifier="grieferSegue" id="oHf-Yp-rPX"/>
                         <segue destination="3er-AY-B2F" kind="modal" identifier="comboSegue" id="ZAf-2W-RqD"/>
                     </connections>
                 </viewController>
@@ -661,7 +661,7 @@ Unicode: U+2190, UTF-8: E2 86 90</string>
                                 <rect key="frame" x="0.0" y="0.0" width="138" height="768"/>
                                 <color key="backgroundColor" red="0.79215686269999996" green="0.87843137250000003" blue="0.6588235294" alpha="1" colorSpace="calibratedRGB"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Socializer" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" preferredMaxLayoutWidth="391" translatesAutoresizingMaskIntoConstraints="NO" id="sa4-hg-wdT">
@@ -743,7 +743,7 @@ Unicode: U+2190, UTF-8: E2 86 90</string>
                                 <rect key="frame" x="0.0" y="0.0" width="138" height="768"/>
                                 <color key="backgroundColor" red="1" green="0.96356050131529836" blue="0.457055548444669" alpha="1" colorSpace="calibratedRGB"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Acheiver" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" preferredMaxLayoutWidth="391" translatesAutoresizingMaskIntoConstraints="NO" id="VR2-bV-O8D">
@@ -868,7 +868,7 @@ Unicode: U+2190, UTF-8: E2 86 90</string>
                                 <rect key="frame" x="0.0" y="0.0" width="138" height="768"/>
                                 <color key="backgroundColor" red="0.7120948912515257" green="0.8786675817154409" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="OEl-pE-evt">
@@ -907,7 +907,7 @@ Unicode: U+2190, UTF-8: E2 86 90</string>
                                 <rect key="frame" x="0.0" y="0.0" width="138" height="768"/>
                                 <color key="backgroundColor" red="0.90196078431372551" green="0.32941176470588235" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Greifer" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" preferredMaxLayoutWidth="391" translatesAutoresizingMaskIntoConstraints="NO" id="7yp-Gh-Yg7">
@@ -1052,7 +1052,7 @@ Unicode: U+2190, UTF-8: E2 86 90</string>
         <image name="squrekiller.png" width="367" height="367"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="0fu-z1-qG0"/>
+        <segue reference="0kn-Jr-QVu"/>
     </inferredMetricsTieBreakers>
     <color key="tintColor" red="0.4217440978" green="0.56358677550000003" blue="0.76384171199999995" alpha="1" colorSpace="calibratedRGB"/>
 </document>
